--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.0.2
-Flask-SocketIO==5.0.1
-eventlet==0.33.0  
+Flask==2.2.2
+Werkzeug==2.2.2
+eventlet==0.33.0
 dnspython==2.1.0
+Flask-SocketIO==5.0.1
