--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.3
+Flask==2.3.2
 Flask-SocketIO==5.3.2
-Werkzeug==2.2.3
 eventlet==0.33.3
-dnspython==2.3.0
+flask-cors==3.0.10
+python-socketio==5.7.2
